<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/person_24"
        android:contentDescription="@string/logo_image_register"/>

    <TextView
        android:id="@+id/tv1_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lengkapi_data_dirimu_di_bawah_ini"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"/>

    <com.aryanto.storyappfinal.ui.custom_view.NameEdt
        android:id="@+id/name_edt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <com.aryanto.storyappfinal.ui.custom_view.EmailEdt
        android:id="@+id/email_edt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <com.aryanto.storyappfinal.ui.custom_view.PasswordEdt
        android:id="@+id/password_edt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_submit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/register"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv2_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#534cb8"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:visibility="gone"/>

</LinearLayout>