...
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#534cb8"
...
